# pdfextractext

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: docs_api.py  main.py
src/models/: pdf.py
src/repository/: pdf_repository.py
src/services/: ai_service.py  pdf_service.py
tests/: conftest.py  test_api.py  test_pdf_service.py
