[project]
name = "pdfextractext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "motor>=3.7.1",
    "ollama>=0.6.1",
    "pymupdf>=1.27.2.2",
    "python-multipart>=0.0.24",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
