[project]
name = "pdfextracttext"
version = "0.1.0"
description = "Proyecto para extracción de texto de PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "motor>=3.6.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.26",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
